# kagayaku

./: Cargo.toml  Makefile  README.md  build.rs  flake.nix  package.nix  rustfmt.toml
resources/: kagayaku.portal  org.freedesktop.impl.portal.desktop.kagayaku.service.in  xdg-desktop-portal-kagayaku.service.in
resources/dbus/: org.gnome.Mutter.DisplayConfig.xml  org.gnome.Shell.Introspect.xml
src/: common.rs  dbus.rs  display_state_tracker.rs  main.rs
src/backend/: display_tracker.rs  mod.rs  window_tracker.rs
src/ui/: mod.rs  wayland.rs
