[package]
name = "kagayaku"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
ashpd = { git = "https://github.com/bilelmoussaoui/ashpd.git", default-features = false, features = ["async-std", "backend"] }
async-channel = "2.5.0"
async-global-executor = "3.1.0"
async-lock = "3.4.1"
async-trait = "0.1.89"
futures-util = "0.3.31"
tracing = "0.1.43"
zbus = { version = "5.12.0", features = ["serde_bytes"] }

[build-dependencies]
anyhow = "1.0.100"
zbus_xml = "5.0.2"
zbus_xmlgen = "5.1.0"
