[package]
name = "kagayaku"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
ashpd = { version = "0.13.0-alpha", default-features = false, features = ["async-io", "backend"] }
async-channel = "2.5.0"
async-global-executor = "3.1.0"
async-lock = "3.4.1"
async-trait = "0.1.89"
futures-util = "0.3.31"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", default-features = false, features = ["fmt", "env-filter"] }
zbus = { version = "5.13.2", features = ["serde_bytes"] }

[build-dependencies]
anyhow = "1.0.101"
zbus_xml = "5.1.0"
zbus_xmlgen = "5.2.0"
